# T-lang

./: CLAUDE.md  Cargo.toml  INSTALLATION.md  README.md  build-all-platforms.sh  build-simple.sh  build-working-platforms.sh  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: telugu-lang.rb
artifacts/: checksums.txt
examples/: advanced-loops.tel  demo2.tel  enhanced_loops.tel  for-loops.tel  loop-syntax-reference.tel  temp.tel  test-simple-function.tel
scripts/: install-linux.sh  install-windows.ps1  telvm-install.sh
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
vs-code-ext/: INSTALL.md  README.md  install-vscode-extension.sh  language-configuration.json  package.json  package.sh  test-for-loops.tel  test.tel
vs-code-ext/snippets/: telugu.json
vs-code-ext/syntaxes/: telugu.tmLanguage.json
vs-code-ext/themes/: telugu-dark.json
