[package]
name = "telugu_lang"
version = "0.1.0"
edition = "2024"
description = "Telugu Programming Language Compiler"
authors = ["Telugu Lang Team"]

[[bin]]
name = "telc"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
